--- a/Bike/podfile
+++ b/Bike/podfile
@@ -2,3 +2,4 @@ platform :ios, '7.0'
 pod 'AFNetworking', '~> 2.5.2'
 pod 'FlatUIKit', '~> 1.6'
 pod 'GCJSONKit', '~> 1.5.0'
+pod 'TAOverlay', '~> 2.0.1'
