--- a/Bike/podfile
+++ b/Bike/podfile
@@ -3,3 +3,4 @@ pod 'AFNetworking', '~> 2.5.2'
 pod 'FlatUIKit', '~> 1.6'
 pod 'GCJSONKit', '~> 1.5.0'
 pod 'TAOverlay', '~> 2.0.1'
+pod 'SDWebImage', '~> 3.7.2'
