--- a/Bike/podfile
+++ b/Bike/podfile
@@ -4,3 +4,4 @@ pod 'FlatUIKit', '~> 1.6'
 pod 'GCJSONKit', '~> 1.5.0'
 pod 'TAOverlay', '~> 2.0.1'
 pod 'SDWebImage', '~> 3.7.2'
+pod 'HJRSeparatableView', '~> 1.1.0'
