--- a/Bike/podfile
+++ b/Bike/podfile
@@ -5,3 +5,4 @@ pod 'GCJSONKit', '~> 1.5.0'
 pod 'TAOverlay', '~> 2.0.1'
 pod 'SDWebImage', '~> 3.7.2'
 pod 'HJRSeparatableView', '~> 1.1.0'
+pod 'Masonry', '~> 0.6.1'
