“支持微信分享”

--- a/Bike/Bike/Info.plist
+++ b/Bike/Bike/Info.plist
@@ -9,7 +9,7 @@
 			<string>shareSDK</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>wx10086</string>
+				<string>wxac383bbc8a40bfa7</string>
 				<string>wb2624857760</string>
 			</array>
 		</dict>
