--- a/Bike/podfile
+++ b/Bike/podfile
@@ -6,3 +6,4 @@ pod 'TAOverlay', '~> 2.0.1'
 pod 'SDWebImage', '~> 3.7.2'
 pod 'HJRSeparatableView', '~> 1.1.0'
 pod 'Masonry', '~> 0.6.1'
+pod 'UITableView+FDTemplateLayoutCell', '~> 1.1-beta'
